rootdir: Ramdisk cleaning Part 1

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -58,28 +58,29 @@ on fs
 
     wait /dev/block/platform/msm_sdcc.1/by-name/apnhlos
     mount vfat /dev/block/platform/msm_sdcc.1/by-name/apnhlos /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
+
 on post-fs-data
     mkdir /data/tombstones 0771 system system
     mkdir /tombstones/modem 0771 system system
 
-# import cne init file
-on post-fs
-    export LD_PRELOAD /vendor/lib/libNimsWrap.so
-
 on boot
-    start imsqmidaemon
-    insmod /system/lib/modules/adsprpc.ko
-    # Enable writing to led blink node from userspace
-    chown system system /sys/class/leds/red/blink
-    chown system system /sys/class/leds/green/blink
+    start qcamerasvr
 
-#Start the qcom-system-daemon service
-service qcomsysd /system/bin/qcom-system-daemon
-    class main
+# Enable writing to led node from userspace
+    chown system system /sys/class/leds/led_b/brightness
+    chown system system /sys/class/leds/led_g/brightness
+    chown system system /sys/class/leds/led_r/brightness
+    chown system system /sys/class/leds/led_b/blink
+    chown system system /sys/class/leds/led_g/blink
+    chown system system /sys/class/leds/led_r/blink
 
-#start camera server as daemon
+# Enable writing to brightness node from userspace
+    chown system system /sys/class/leds/led:flash_torch/brightness
+    chmod 0666 /sys/class/leds/led:flash_torch/brightness
+
+# Start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-    class main
+    class late-start
 	user camera
     group camera system inet input graphics
 
@@ -99,13 +100,13 @@ service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
    user root
    disabled
 
-#start GNSS/Sensor interface daemon
+# Start GNSS/Sensor interface daemon
 service gsiff_daemon /system/bin/gsiff_daemon
    class late_start
    user system
    group gps net_raw
 
-service thermal-engine /system/bin/thermal-engine
+service thermal-engine /system/bin/thermal-engine -c /etc/thermal-engine-8226.conf
    class main
    user root
    group root
@@ -114,7 +115,6 @@ service qrngd /system/bin/qrngd -f
     class main
     user root
     group root
-
 
 service qrngp /system/bin/qrngp
     class main
@@ -141,85 +141,17 @@ service adsprpcd /system/bin/adsprpcd
    user media
    group media
 
-service prepare-mobicore /system/bin/sh /system/bin/mobicore-presetup.sh
-    class core
-	user root
-	group root
-	oneshot
-
-service run-mobicore /system/bin/sh /system/bin/mobicore-startup.sh
-	class core
-	user system
-	group system
-
-on property:init.svc.bootanim=stopped
-	start run-mobicore
-
-service imsqmidaemon /system/bin/imsqmidaemon
-    class main
-    user system
-    group radio net_raw log qcom_diag
-    disabled
-
-# imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
-service imsdatadaemon /system/bin/imsdatadaemon
-    class main
-    user root
-    group system wifi radio net_raw log qcom_diag net_admin
-    disabled
-
-on property:sys.ims.QMI_DAEMON_STATUS=1
-    start imsdatadaemon
-
-service ims_rtp_daemon /system/bin/ims_rtp_daemon
-   class main
-   user system
-   group radio net_raw diag qcom_diag log
-   disabled
-
-on property:sys.ims.DATA_DAEMON_STATUS=1
-    start ims_rtp_daemon
-
 service wcnss-service /system/bin/wcnss_service
    class late_start
    user system
    group system wifi
    oneshot
 
- service ppd /system/bin/mm-pp-daemon
-     class late_start
-     user system
-     socket pps stream 0660 system system
-     group system graphics
- 
- on property:init.svc.surfaceflinger=stopped
-     stop ppd
-
-# SecEDS
-service TvoutService_C /system/bin/bintvoutservice
-     class main
-     user system
-     group graphics
-on property:ro.SecEDS.enable=false
-    stop TvoutService_C
-
-# Secure Storage startup
-service secure_storage /system/bin/secure_storage_daemon
-    class core
+service ppd /system/bin/mm-pp-daemon
+    class late_start
     user system
-    group system
-    disabled
-
-on property:ro.securestorage.support=true
-    mkdir /dev/.secure_storage
-    chmod 0711 /dev/.secure_storage
-    chown system system /dev/.secure_storage
-    restorecon -R /dev/.secure_storage
-    start secure_storage
-
-on property:ro.securestorage.knox=true
-    mkdir /dev/.secure_storage
-    chmod 0711 /dev/.secure_storage
-    chown system system /dev/.secure_storage
-    restorecon -R /dev/.secure_storage
-    start secure_storage
+    socket pps stream 0660 system system
+    group system graphics
+ 
+on property:init.svc.surfaceflinger=stopped
+    stop ppd
