--- a/rootdir/init.carrier.rc
+++ b/rootdir/init.carrier.rc
@@ -7,8 +7,9 @@
 on init
     # Support Preload install apks
     mkdir /preload 0771 system system
+
 on boot
-# permissions for bluetooth.
+# Permissions for bluetooth.
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
     chown bluetooth net_bt_stack /dev/ttyHS0
@@ -17,10 +18,7 @@ on boot
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
 
-# SSWAP
-    write /proc/sys/vm/swappiness 130
-
-# permissions for TSP
+# Permissions for TSP
     chown system system /sys/class/sec/tsp/cmd
     chown system system /sys/class/input/input1/enabled
 	chown system system /sys/class/input/input2/enabled
@@ -30,7 +28,7 @@ on boot
 	chmod 0664 /sys/class/input/input2/enabled
     chmod 0664 /sys/class/sec/sec_touchkey/brightness
 	
-#permission for touchkey	
+# Permission for touchkey	
     chown system system /sys/class/sec/sec_touchkey/touchkey_brightness
     chown system system /sys/class/sec/sec_touchkey/touchkey_menu
     chown system system /sys/class/sec/sec_touchkey/touchkey_back
@@ -55,65 +53,21 @@ on boot
    	chmod 0664 /sys/class/sec/sec_touchkey/touchkey_threshold
     chmod 0664 /sys/devices/virtual/sec/sec_touchkey/brightness
 
-# Torch permission
-    chown system system /sys/class/leds/led:flash_torch/brightness
-    chmod 0664 /sys/class/leds/led:flash_torch/brightness
-
-# bluetooth LPM
-
-# bluetooth dhcp config
-
 # efs  
     mkdir /efs/drm 0700 system system
     mkdir /efs/imei 0775 radio radio
-    restorecon -R /efs
-
-# TODO: replace it with device's DEXPREOPT_BOOT_JARS
-
-# RIL
-service at_distributor /system/bin/at_distributor
-    class late_start
-    user root
-    group radio log
 
 on fs
 
-	# Support Preload install apks
-	  wait /dev/block/platform/msm_sdcc.1/by-name/hidden
-      mount ext4 /dev/block/platform/msm_sdcc.1/by-name/hidden /preload nosuid nodev ro barrier=1
-      setprop storage.preload.complete 1
-
-service diag_uart_log /system/bin/diag_uart_log
-    class main
-    user root
-    group radio
-
-# for ethernet
-#service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
-#    class main
-#    disabled
-#    oneshot
+# Support Preload install apks
+	wait /dev/block/platform/msm_sdcc.1/by-name/hidden
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/hidden /preload nosuid nodev ro barrier=1
+    setprop storage.preload.complete 1
 
 # Kickstart the Wireless subsystem
-write /dev/wcnss_wlan 1
-write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
-
-service ftm_ptt /system/bin/ftm_ptt -d
-    user root
-    group radio system
-    disabled
-
-# end of wifi
+    write /dev/wcnss_wlan 1
 
 # NFC
     setprop ro.nfc.port "I2C"
     chown nfc nfc /dev/pn547
     chmod 0660 /dev/pn547
-
-# SSWAP
-service swapon /sbin/sswap -s
-    class core
-    user root
-    group root
-    seclabel u:r:sswap:s0
-    oneshot
