--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -718,6 +718,11 @@ on property:bluetooth.isEnabled=true
     start btwlancoex
     write /sys/class/bluetooth/hci0/idle_timeout 7000
 
+service qcom-c_core-sh /system/bin/sh /init.qcom.class_core.sh
+    class core
+    user root
+    oneshot
+
 on property:vold.decrypt=trigger_restart_framework
     start config_bluetooth
 
