--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -110,7 +110,7 @@
 /dev/msm_vidc_enc_sec     0660   system     audio
 /dev/msm_rotator          0660   system     system
 /dev/hw_random            0660   system     system
-/dev/adsprpc-smd          0660   media      camera
+/dev/adsprpc-smd          0660   system     system
 /dev/graphics/*           0660   system     graphics
 /dev/tun                  0660   system     vpn
 
