--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -422,7 +422,6 @@ on boot
     chown radio system /sys/class/lcd/panel/power_reduce
     chown radio system /sys/class/lcd/panel/siop_enable
 
-    chown system system /sys/class/timed_output/vibrator/enable
     chown system system /sys/class/leds/keyboard-backlight/brightness
     chown system system /sys/class/leds/lcd-backlight/brightness
     chown system system /sys/class/leds/button-backlight/brightness
@@ -552,6 +551,11 @@ on boot
     chmod 0660 /dev/tspdrv
     chown vibe vibe /dev/tspdrv
 
+    # Vibrator
+    chmod 0644 /sys/class/timed_output/vibrator/pwm_value
+    chown root system /sys/class/timed_output/vibrator/pwm_value
+    chown system system /sys/class/timed_output/vibrator/enable
+
     # Permissions for TSP
     chown system system /sys/class/sec/tsp/cmd
     chown system system /sys/class/sec/tsp/input/enabled
@@ -565,6 +569,7 @@ on boot
     chmod 0664 /sys/class/input/input2/enabled
 
     # Permission for touchkey
+    chown system system /sys/class/sec/sec_touchkey/keypad_enable
     chown system system /sys/class/sec/sec_touchkey/touchkey_brightness
     chown system system /sys/class/sec/sec_touchkey/touchkey_menu
     chown system system /sys/class/sec/sec_touchkey/touchkey_back
@@ -577,6 +582,7 @@ on boot
     chown system system /sys/class/sec/sec_touchkey/touchkey_threshold
     chown system system /sys/devices/virtual/sec/sec_touchkey/brightness
 
+    chmod 0664 /sys/class/sec/sec_touchkey/keypad_enable
     chmod 0664 /sys/class/sec/sec_touchkey/touchkey_brightness
     chmod 0664 /sys/class/sec/sec_touchkey/touchkey_menu
     chmod 0664 /sys/class/sec/sec_touchkey/touchkey_back
@@ -702,14 +708,14 @@ service port-bridge /system/bin/port-bridge /dev/smd0 /dev/ttyGS0
     group system inet
     disabled
 
-on property:init.svc.surfaceflinger=stopped
-    stop ppd
-
-service ppd /system/bin/mm-pp-daemon
-    class late_start
-    user system
-    socket pps stream 0660 system system
-    group system graphics
+#on property:init.svc.surfaceflinger=stopped
+#    stop ppd
+#
+#service ppd /system/bin/mm-pp-daemon
+#    class late_start
+#    user system
+#    socket pps stream 0660 system system
+#    group system graphics
 
 service ptt_ffbm /system/bin/ptt_socket_app -f -d
     user root
