--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -409,7 +409,9 @@ on boot
 
     # Assume SMP uses shared cpufreq policy for all CPUs
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
     # Auto Brightness
     chown system system  /sys/class/backlight/panel/auto_brightness
@@ -738,12 +740,6 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 on property:sys.boot_completed=1
     start qcom-post-boot
 
-service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
-    class late_start
-    user root
-    disabled
-    oneshot
-
 service qmuxd /system/bin/qmuxd
     class main
     user radio
@@ -937,6 +933,72 @@ on charger
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "powersave"
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "powersave"
 
+on property:sys.boot_completed=1
+    write /sys/block/mmcblk0/queue/scheduler row
+
+    # Configure CPU
+    write /sys/module/lpm_levels/enable_low_power/l2 2
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu2/online 1
+    write /sys/devices/system/cpu/cpu3/online 1
+    write /sys/module/msm_pm/modes/cpu0/power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu1/power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu2/power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu3/power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu0/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu1/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu2/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu3/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/msm_pm/modes/cpu0/standalone_power_collapse/idle_enabled 1
+    write /sys/module/msm_pm/modes/cpu1/standalone_power_collapse/idle_enabled 1
+    write /sys/module/msm_pm/modes/cpu2/standalone_power_collapse/idle_enabled 1
+    write /sys/module/msm_pm/modes/cpu3/standalone_power_collapse/idle_enabled 1
+    write /sys/module/msm_pm/modes/cpu0/power_collapse/idle_enabled 1
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+	write /sys/module/msm_thermal/core_control/enabled 1
+    chown root system /sys/devices/system/cpu/cpu1/online
+    chown root system /sys/devices/system/cpu/cpu2/online
+    chown root system /sys/devices/system/cpu/cpu3/online
+    chmod 664 /sys/devices/system/cpu/cpu1/online
+    chmod 664 /sys/devices/system/cpu/cpu2/online
+    chmod 664 /sys/devices/system/cpu/cpu3/online
+
+	# Configure ondemand governor
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 50000
+    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
+    write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 2
+    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 10
+	write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 70
+	write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 10
+	write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 300000
+	write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 300000
+	write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
+	write /sys/devices/system/cpu/cpufreq/ondemand/freq_step 20
+	write /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor 1
+	write /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor 1
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sync_freq
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/freq_step
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
+	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
+	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/freq_step
+	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
+	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
+	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
+	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
+	chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
+	chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
+	chown system system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
+
+   # Post boot services
+    start mpdecision
+
+# CM Performance profiles
 # Powersave
 on property:sys.perf.profile=0
     start mpdecision
@@ -948,10 +1010,10 @@ on property:sys.perf.profile=0
 # Balanced
 on property:sys.perf.profile=1
     start mpdecision
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor ondemand
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
 
 # High performance
 on property:sys.perf.profile=2
