--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -923,7 +923,6 @@ on charger
 
 # CM Performance profiles
 on property:sys.boot_completed=1
-    write /sys/block/mmcblk0/queue/scheduler row
     write /sys/module/lpm_levels/enable_low_power/l2 4
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
@@ -991,6 +990,9 @@ on property:sys.boot_completed=1
 
     # Post boot services
     start mpdecision
+
+on property:init.svc.bootanim=stopped
+    write /sys/block/mmcblk0/queue/scheduler row
 
 # Powersave
 on property:sys.perf.profile=0
